Sat Sep  6 01:34:31 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_f_exec): Call before_exec_async_signal_safe and
	  after_exec_async_signal_safe around rb_exec_async_signal_safe.
	  (rb_exec_async_signal_safe): Don't call
	  before_exec_async_signal_safe and after_exec_async_signal_safe.
	  (rb_exec_without_timer_thread): Call before_exec and
	  after_exec.
	  (disable_child_handler_fork_child): Make SIGPIPE handler SIG_DFL.

Sat Sep  6 00:49:41 2014  Tanaka Akira  <akr@fsij.org>

	* signal.c (ruby_signal): Don't set SA_SIGINFO for SIG_IGN and
	  SIG_DFL.

Fri Sep  5 21:45:33 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (disable_child_handler_before_fork): New function.
	  (disable_child_handler_fork_parent): Ditto.
	  (disable_child_handler_fork_child): Ditto.
	  (retry_fork_async_signal_safe): Call above functions to disable
	  signal handlers in child process.

Fri Sep  5 21:02:54 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (handle_fork_error): Make try_gc_p argument volatile to
	  suppress "clobbered" warning.

Fri Sep  5 20:48:06 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (handle_fork_error): Don't need state_p argument.

Fri Sep  5 20:35:52 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (has_privilege): Fix a return value.

Fri Sep  5 19:00:40 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/shellwords.rb: proofreading documentation.
	  [Bug #10155][ruby-core:64471]

Fri Sep  5 18:34:33 2014  Laurent Arnoud  <laurent@spkdev.net>

	* test/csv/test_row.rb: Added some missing tests in CSV.
	  [fix GH-710]
	* test/csv/test_table.rb: ditto.

Fri Sep  5 12:57:52 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (has_privilege): Refine uid/gid check.

Fri Sep  5 12:40:55 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check sys/id.h, getuidx and getgidx for AIX.

	* process.c (getresuid): Defined for AIX.
	  (getresgid): Ditto
	  AIX don't have getresuid/getresgid but getuidx/getgidx.
